--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,19 +16,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
       - name: Build Docker image
-        run: |
-          DOCKER_BUILDKIT=1 docker build -t my-cypress-image .
+        run: docker build -t wlsf82/gitlab-ce .
 
-      - name: Run Cypress in Docker
-        run: |
-          docker run --rm -e CYPRESS_baseUrl=http://localhost \
-                          -e CYPRESS_user_name=${{ secrets.USER_NAME }} \
-                          -e CYPRESS_user_password=${{ secrets.USER_PASSWORD }} \
-                          -e CYPRESS_gitlab_access_token=${{ secrets.GITLAB_ACCESS_TOKEN }} \
+      - name: Run Cypress tests
+        run: docker run --rm -e CYPRESS_baseUrl=http://localhost \
                           my-cypress-image
