--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
 
       - name: Run Cypress tests
         run: docker run --rm -e CYPRESS_baseUrl=http://localhost \
-                          my-cypress-image
+                          wlsf82/gitlab-ce
